--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&amp;family=Raleway&amp;family=Shrikhand&amp;display=swap&amp;_cacheOverride=1702719730117" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css?_cacheOverride=1702719730117" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="../Sass/main.css">
+    <link rel="stylesheet" href="/Sass/main.css">
 </head>
 <body>
     <div class="main-container">
         <header>
-            <img src="../Assets/Images/logo/ohmyfood.png" alt="logo" title="Ohmyfood" id="logo"></a>
+            <img src="/Assets/Images/logo/ohmyfood.png" alt="logo" title="Ohmyfood" id="logo"></a>
         <nav>
             <form class="search-bar">
                 <i class="fa-solid fa-location-dot" aria-hidden="true"></i>
@@ -55,7 +55,7 @@
         <section class="menus">
             <h2 id="restaurants" class="section-title3">Restaurants</h2>
             <div  class="cartes">
-                <a href="../Restaurants/restaurant1.html">
+                <a href="/Restaurants/restaurant1.html">
                     <article class="carte">
                         <div class="image-container">
                             <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image d'un plat rond">                          
@@ -70,7 +70,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="../Restaurants/restaurant2.html">
+                <a href="/Restaurants/restaurant2.html">
                     <article class="carte">
                         <div class="image-container">
                             <img class="img-enchantee-accueil"  src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image d'un plat rond">
@@ -85,9 +85,9 @@
                         </div>
                     </article>
                 </a>
-                <a href="../Restaurants/restaurant3.html">
+                <a href="/Restaurants/restaurant3.html">
                     <article class="carte">
-                        <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat rond">
+                        <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image d'un plat rond">
                         <div class="carte-txt">    
                             <h3 class="carte-title">À la française</h3>
                             <p class="carte-subtitle">Cité Rouge</p>
@@ -97,9 +97,9 @@
                         </div>
                     </article>
                 </a>
-                <a href="../Restaurants/restaurant4.html">
+                <a href="/Restaurants/restaurant4.html">
                     <article class="carte">
-                        <img src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat rectangulaire">
+                        <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image d'un plat rectangulaire">
                         <div class="carte-txt">    
                             <h3 class="carte-title">Le délice des sens</h3>
                             <p class="carte-subtitle">Folie-Méricourt</p>
@@ -113,7 +113,7 @@
         </section>
         </main>
         <footer>
-            <img src="../Assets/Images/logo/ohmyfood.png" class="logo_footer" alt="logo.png"></img>
+            <img src="/Assets/Images/logo/ohmyfood.png" class="logo_footer" alt="logo.png"></img>
             <div class="footer-container">
                 <ul class="links">
                     <i class="fa-solid fa-utensils" aria-hidden="true"><b class="logofooter-txt"> Proposer un restaurant</b></i></a></li>
